[tool.poetry]
name = "pulse_scaler"
version = "0.1.0"
description = "Scaling de circuit avec qiskit"
authors = ["Dimitri <bond2102@usherbrooke.ca>"]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
qiskit = "^0.34.2"
numpy = "^1.22.2"
scipy = "^1.8.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0"
flake8 = "^4.0.1"
tox = "^3.24.5"
mypy = "^0.931"
pylint = "^2.12.2"
pydocstyle = "^6.1.1"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[mypy]
python_version = 3.10
ignore_missing_imports = true
[mypy-setup]
ignore_errors = true
