[metadata]
name = pulse_scaler
description = Scaling de circuit avec qiskit
author = Duumbo
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    pulse_scaler
install_requires=
    qiskit >= 0.34
    numpy >= 1.22
    scipy >= 1.8
    matplotlib >= 3.5.1
python_requires = >=3.9, <3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    mypy>=0.931
    tox>=3.24

[flake8]
max-line-length = 160